[package]
name = "wasm-xlsxwriter"
version = "0.11.0-alpha.1"
edition = "2021"
repository = "https://github.com/estie-inc/wasm-xlsxwriter"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.82"
rust_xlsxwriter = { version = "0.92.0", features = ["wasm", "chrono"] }
wasm-bindgen = "0.2.106"
