[package]
name = "wasm-xlsxwriter"
version = "0.12.1"
edition = "2021"
repository = "https://github.com/estie-inc/wasm-xlsxwriter"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.91"
rust_xlsxwriter = { version = "0.94.0", features = ["wasm", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.4", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.106"
