[package]
name = "wrapper-generator"
version = "0.1.0"
edition = "2021"
description = "Tool to automatically generate wasm_xlsxwriter wrapper methods from rust_xlsxwriter"


[dependencies]
crate_info_extractor = { path = "../crate_info_extractor" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ruast = { git = "https://github.com/rajyan/ruast.git" , branch = "feat/visibility-pub-in-path" }
